# spot-od-reproduction

./: .gitattributes  .gitignore  .gitlab-ci.yml  .ignore  .zenodo.json  CITATION.cff  LICENSE.md  README.md  pyproject.toml  requirements.txt
configs/: archived_tles.json  experiment.yaml  public_satnogs_recent_good_observations.json  public_satnogs_stations_snapshot.json  public_tracking_manifest.json  smoke.yaml
docs/: ARTIFACTS.md  REPRODUCTION_BOUNDARY.md  verify_release_packet_sync.py
paper/: RELEASE_PACKET.md  evidence_plan.tex  highlights.txt  main.tex  references.bib  supplement.tex
release/: CITATION.cff  DEPOSIT_CHECKLIST.md  INDEPENDENT_MACHINE_REPRODUCTION_REQUEST.md  LICENSE_CC_BY_4_0.txt  MANIFEST_v1.3.1-validation-selected-residual-refine.md  MANIFEST_v1.3.2-public-reproduction-package.md  README.md  README_v1.3.1-validation-selected-residual-refine.md  README_v1.3.2-public-reproduction-package.md  RELEASE_NOTES_v1.2.2-acf-audit.md  RELEASE_NOTES_v1.2.3-acf-holdout-audit.md  RELEASE_NOTES_v1.2.4-acf-prospective-guard.md  RELEASE_NOTES_v1.2.5-zenodo-metadata-repair.md  RELEASE_NOTES_v1.3.0-edge-only-residual-refine.md  RELEASE_NOTES_v1.3.1-edge-only-residual-refine-sync.md  RELEASE_NOTES_v1.3.1-validation-selected-residual-refine.md  RELEASE_NOTES_v1.3.2-public-reproduction-package.md  REVIEWER_START_HERE.md  SUPPLEMENTARY_MANIFEST.json  TRAINING_INPUT_BUNDLE_MANIFEST_v1.3.2-public-reproduction-package.json  TRAINING_INPUT_BUNDLE_v1.3.2-public-reproduction-package.md  ZENODO_METADATA.json
results/: force_mismatch_seed_significance.json  (+14 more)
(+1143 files in other folders)
