[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-state-estimation"
version = "0.1.0"
description = "SPOT-OD GNN and filtering artifacts for sparse-visibility satellite state estimation."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
  "torch>=2.3",
  "pyyaml>=6.0",
  "pytest>=8.0",
  "optuna>=4.0",
  "sgp4>=2.25",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gnn_state_estimation*", "satgnn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["external", ".venv", "build", "dist", "results", "release", "paper", "logs", "reports", "configs", "docs", "scripts", "tools", "__pycache__"]
addopts = "--ignore=external"
